--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.1'
+    testImplementation 'org.mockito:mockito-core:3.0.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.0.0'
     testImplementation 'org.assertj:assertj-core:3.12.2'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'junit'
