--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,26 @@ server:
   tomcat:
     accept-count: 100
     max-threads: 200
+  servlet:
+    session:
+      tracking-modes: cookie
+
+spring:
+  h2:
+    console:
+      enabled: true
+  datasource:
+    url: jdbc:h2:mem://localhost/~/jwp-spring-boot;MVCC=TRUE;DB_CLOSE_ON_EXIT=FALSE
+  jpa:
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+    properties:
+      hibernate:
+        format_sql: true
+
+logging:
+  level:
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
 handlebars:
   suffix: .html
