--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
       enabled: true
   datasource:
     url: jdbc:h2:mem://localhost/~/jwp-spring-boot;DB_CLOSE_DELAY=-1
+    hikari:
+      maximum-pool-size: 1
+      leak-detection-threshold: 2000
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
